--- a/Hospital.WPF/Controls/Ambulatory/AmbMenuPanel.xaml
+++ b/Hospital.WPF/Controls/Ambulatory/AmbMenuPanel.xaml
@@ -1,39 +1,39 @@
-﻿<UserControl x:Class="Hospital.WPF.Controls.Ambulatory.AmbMenuPanel"
+﻿<UserControl x:Class="Hospital.WPF.Controls.Ambulatory.AmbMenuPanel" Name="uc_ambMenuPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:view="clr-namespace:Hospital.WPF.Views"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-             xmlns:controls="clr-namespace:Hospital.WPF.Controls.Ambulatory"
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Ambulatory"
-             xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-             xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
-             mc:Ignorable="d" 
+             xmlns:parts="clr-namespace:Hospital.WPF.Resources.Parts"
+             xmlns:vm="clr-namespace:Hospital.ViewModel.Ambulatory;assembly=Hospital.ViewModel"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=vm:AmbulatoryViewModel}"
              d:DesignHeight="540.748" d:DesignWidth="305.094">
-
-    <!--<UserControl.DataContext> <vm:AmbulatoryViewModel/> </UserControl.DataContext>-->
 
     <Grid>
         <StackPanel Orientation="Vertical" >
             
-            <Expander IsExpanded="True" Foreground="{DynamicResource BrushForegroundMid}"
-                      Template="{DynamicResource ExpanderAmbulatory}"
-                      HorizontalAlignment="Stretch"
+            <Expander IsExpanded="True" Foreground="{StaticResource BrushForegroundMid}"
+                      Template="{StaticResource Expander.AmbulatoryMenu}"
+                      HorizontalAlignment="Stretch" 
                       BorderThickness="0" Padding="15">
                 <Expander.Header>
-                    <TextBlock TextWrapping="WrapWithOverflow" TextAlignment="Center" FontSize="25">
-                        <TextBlock.Text>
-                            <MultiBinding StringFormat="{}{0} {1} {2}">
-                                <Binding Path="CurrentEntry.Patient.FirstName" Converter="{StaticResource ToUpperCaseConverter}"/>
-                                <Binding Path="CurrentEntry.Patient.MidName"/>
-                                <Binding Path="CurrentEntry.Patient.LastName"/>
-                            </MultiBinding>
-                        </TextBlock.Text>
-                    </TextBlock>
+                    <Grid>
+                        <TextBlock TextWrapping="WrapWithOverflow" TextAlignment="Center" FontSize="24">
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0} {1} {2}">
+                                    <Binding Path="CurrentEntry.Patient.FirstName" Converter="{StaticResource ToUpperCaseConverter}"/>
+                                    <Binding Path="CurrentEntry.Patient.MidName"/>
+                                    <Binding Path="CurrentEntry.Patient.LastName"/>
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                        <parts:LoadingSpinner IsLoading="{Binding IsLoading}" Thickness="3" Foreground="{DynamicResource MahApps.Brushes.Accent}"/>
+                    </Grid>
                 </Expander.Header>
                 <StackPanel Orientation="Vertical">
-                    <Border Background="{DynamicResource BrushAccent1}" Height="3"/>
+                    <Border Background="{DynamicResource MahApps.Brushes.Accent}" Height="3"/>
                     <Grid Margin="15">
                         <Grid.Resources>
                             <Style TargetType="{x:Type TextBlock}">
@@ -74,47 +74,64 @@
                     </Grid>
                 </StackPanel>
             </Expander>
-            
-            <ListBox x:Name="TabMenu" Background="Transparent" IsSynchronizedWithCurrentItem="True"
-                     ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=view:Ambulatory}, Path=Navigator.GetControls}"
-                     SelectedItem="{Binding RelativeSource={RelativeSource AncestorType=view:Ambulatory}, Path=Navigator.CurrentBody}">
-                <ListBox.Resources>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="Padding" Value="0"/>
-                        <Setter Property="BorderThickness"  Value="0"/>
-                        <Setter Property="Template" Value="{DynamicResource ListBoxItemAmbMenu}"/>
-                    </Style>
-                </ListBox.Resources>
 
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Expander x:Name="ExpanderMenu" Template="{StaticResource ExpanderAmbulatory}" Header="{Binding Title}"
-                                  Foreground="{DynamicResource BrushForegroundMid}"
-                                  IsExpanded="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem}, Path=IsSelected}"
-                                  IsHitTestVisible="False" BorderThickness="0,1,0,0" BorderBrush="{DynamicResource BrushPrimaryBorderLight}"
-                                  Padding="10" HorizontalContentAlignment="Center" FontSize="20">
-                        </Expander>
-                        <DataTemplate.Triggers>
-                            <DataTrigger Binding="{Binding Title}" Value="Диагностика">
-                                <Setter TargetName="ExpanderMenu" Property="Content">
+            <ListBox x:Name="TabMenu" Background="Transparent"
+                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                     SelectedItem="{Binding RelativeSource={RelativeSource AncestorType=view:Ambulatory}, Path=MenuNavigator.CurrentBody}"
+                     ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=view:Ambulatory}, Path=MenuNavigator.Bodies}">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource ListBoxItem.Menu.Ambulatory}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Type}" Value="{x:Type local:AmbDiagnostic}">
+                                <Setter Property="Content">
                                     <Setter.Value>
-                                        <TextBlock Text="test"/>
+                                        <Grid Margin="10 0 10 10" HorizontalAlignment="Center">
+                                            <Grid.Resources>
+                                                <Style TargetType="{x:Type Grid}">
+                                                    <Style.Triggers>
+                                                        <DataTrigger Binding="{Binding IsLoading}" Value="true">
+                                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                                        </DataTrigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </Grid.Resources>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="1*"/>
+                                                <ColumnDefinition Width="0.1*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                            </Grid.RowDefinitions>
+
+                                            <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="left" Text="Тестирований:  " FontSize="14"/>
+                                            <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="left" Text="Симптомов:  " FontSize="14"/>
+                                            <TextBlock Grid.Row="2" Grid.Column="0" HorizontalAlignment="left" Text="В ожидании:  " FontSize="14"/>
+    
+                                            <TextBlock FontSize="14" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0"
+                                                       Text="{Binding DiagnosticViewModel.DataCount, Mode=OneWay}"/>
+                                            <TextBlock FontSize="14" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="1"
+                                                       Text="{Binding DiagnosticViewModel.DataIsSymptomCount, Mode=OneWay}"/>
+                                            <TextBlock FontSize="14" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="2"
+                                                       Text="{Binding DiagnosticViewModel.DataAwaitCount, Mode=OneWay}"/>
+                                        </Grid>
                                     </Setter.Value>
                                 </Setter>
                             </DataTrigger>
-                            <DataTrigger Binding="{Binding Title}" Value="Карта">
-                                <Setter TargetName="ExpanderMenu" Property="Content">
+                            <DataTrigger Binding="{Binding Type}" Value="{x:Type local:AmbTherapy}">
+                                <Setter Property="Content">
                                     <Setter.Value>
                                         <TextBlock Text="test 2"/>
                                     </Setter.Value>
                                 </Setter>
                             </DataTrigger>
-                        </DataTemplate.Triggers>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
+                        </Style.Triggers>
+                    </Style>
+                </ListBox.ItemContainerStyle>
             </ListBox>
+
             <Border Background="{DynamicResource BrushPrimaryBorderLight}" Height="1" VerticalAlignment="Top"/>
         </StackPanel>
-
     </Grid>
 </UserControl>
