--- a/Hospital.WPF/App.xaml
+++ b/Hospital.WPF/App.xaml
@@ -8,13 +8,19 @@
             <ResourceDictionary.MergedDictionaries>
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
                 <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />-->
                 <!-- Theme setting -->
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
-
-                <ResourceDictionary Source="/Resources/Dictionary.xaml" />
+                
+                <ResourceDictionary Source="/Resources/Converters.xaml" />
+                <ResourceDictionary Source="/Resources/EnumProviders.xaml"/>
+                
                 <ResourceDictionary Source="/Resources/Theme.xaml" />
-                <ResourceDictionary Source="/Resources/Local/EnumProviders.xaml" />
+                <ResourceDictionary Source="/Resources/Geometries.xaml" />
+                <ResourceDictionary Source="/Resources/Expanders.xaml" />
+                <ResourceDictionary Source="/Resources/Buttons.xaml" />
+                <ResourceDictionary Source="/Resources/DataGrids.xaml" />
+                <ResourceDictionary Source="/Resources/Lists.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
