--- a/Hospital.WPF/Controls/Ambulatory/AmbEntrySavePanel.xaml
+++ b/Hospital.WPF/Controls/Ambulatory/AmbEntrySavePanel.xaml
@@ -11,20 +11,38 @@
              mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="35"/>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" BorderBrush="{DynamicResource BrushPrimaryBorderLight}" BorderThickness="0,0,0,1"/>
+        <Border Grid.Row="0" BorderBrush="{StaticResource BrushPrimaryBorderLight}" BorderThickness="0,0,0,1"/>
+        
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button Content="Back" Margin="5,0,5,5" Grid.Column="0" Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Ambulatory}}, Path=EntrySearchNavigator.SetByType}"
-                    CommandParameter="{x:Type local:AmbEntrySelectPanel}"/>
-            <Button Content="Save" Margin="5,0,5,5" Grid.Column="1" HorizontalAlignment="Right"
-                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Ambulatory}}, Path=Command.SaveDatas}"/>
+            <Button Margin="5,0,5,5" Grid.Column="0" ToolTip="Назад"
+                    Foreground="{StaticResource BrushForegroundMid}"
+                    mah:ControlsHelper.CornerRadius="16"
+                    mah:ItemHelper.HoverForegroundBrush="{StaticResource BrushForegroundVeryLight}"
+                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Ambulatory}}, Path=EntrySearchNavigator.SetByType}"
+                    CommandParameter="{x:Type local:AmbEntrySelectPanel}">
+                <Path Data="{StaticResource path.Undo}"  Margin="7"/>
+            </Button>
+
+            <Button Grid.Column="1" HorizontalAlignment="Right" Padding="10 0 "
+                    BorderThickness="0 0 0 3" BorderBrush="Transparent"
+                    Foreground="{StaticResource BrushForegroundMid}"
+                    mah:ItemHelper.HoverForegroundBrush="{StaticResource Brush.AccentGreen}"
+                    mah:ControlsHelper.FocusBorderBrush="{StaticResource Brush.AccentGreen}"
+                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Ambulatory}}, Path=Command.SaveDatas}">
+                <StackPanel Orientation="Horizontal">
+                    <Path Data="{StaticResource path.Save}" Margin="0 0 10 0"/>
+                    <TextBlock Text="СОХРАНИТЬ"/>
+                </StackPanel>
+            </Button>
+            
         </Grid>
         <Grid Grid.Row="1">
             <Grid DataContext="{Binding EntryOut}">
@@ -83,7 +101,7 @@
                 <StackPanel Grid.Column="1" Margin="15,5" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Center">
                     <TextBlock Text="{Binding TargetDateTime, StringFormat=dd MMMM, ConverterCulture='ru-RU'}" FontSize="18" FontWeight="DemiBold" HorizontalAlignment="Right"/>
                     <TextBlock Text="{Binding TargetDateTime, StringFormat=dddd, ConverterCulture='ru-RU'}" Margin="0,-3" HorizontalAlignment="Right" FontSize="14" Foreground="{DynamicResource BrushForegroundVeryLight}"/>
-                    <TextBlock Text="{Binding TargetDateTime, StringFormat=hh:mm}" HorizontalAlignment="Right" FontSize="20" FontWeight="DemiBold" Foreground="{DynamicResource BrushAccentInvert}"/>
+                    <TextBlock Text="{Binding TargetDateTime, StringFormat=HH:mm}" HorizontalAlignment="Right" FontSize="20" FontWeight="DemiBold" Foreground="{DynamicResource BrushAccentInvert}"/>
                 </StackPanel>
             </Grid>
         </Grid>
