--- a/Hospital.WPF/Controls/Registrator/RegDoctorCards.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegDoctorCards.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:view="clr-namespace:Hospital.WPF.Views"
+             xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type={x:Type vm:RegistratorViewModel}}"
              d:DesignHeight="140" d:DesignWidth="350">
 
     <UserControl.Resources>
@@ -21,11 +22,13 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Border Background="{DynamicResource BrushBackgroundPaper}" Grid.ColumnSpan="2" Effect="{StaticResource ShadowCard}" CornerRadius="2" />
-        <Button Background="{StaticResource BrushAccent1}" Grid.Column="0" BorderThickness="0"
-                mah:ControlsHelper.CornerRadius="2,0,0,2"
-                mah:ControlsHelper.FocusBorderThickness="0"
-                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.SetBody}"
-                    CommandParameter="Doctors"/>
+        <Button Background="{StaticResource MahApps.Brushes.Accent}" Style="{StaticResource Button.Common}" Grid.Column="0" BorderThickness="0"
+                mah:ControlsHelper.CornerRadius="2,0,0,2" mah:ControlsHelper.MouseOverBorderBrush="{StaticResource MahApps.Brushes.Accent}"
+                Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Navigator.SetByType}"
+                CommandParameter="{x:Type local:RegDoctorTable}"/>
+        <Button Content="X" Grid.Column="0" Style="{StaticResource MahApps.Styles.Button.Chromeless}" VerticalAlignment="Top" Padding="5" Foreground="White"
+                Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.CleanEntry}"/>
+            
         <TextBlock Text="Д О К Т О Р" FontSize="12" IsHitTestVisible="False"  Foreground="White" Margin="0,10" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom">
             <TextBlock.LayoutTransform>
                 <RotateTransform Angle="-90"/>
@@ -40,7 +43,7 @@
             </StackPanel>
         </StackPanel>
 
-        <TextBlock Text="{Binding SelectedEntry.DoctorDestination.Department.Title.Title}"  Foreground="{DynamicResource BrushForegroundVeryLight}"
+        <TextBlock Text="{Binding SelectedEntry.DoctorDestination.Department.Title.Caption}"  Foreground="{DynamicResource BrushForegroundVeryLight}"
                    Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="15" Margin="10,5"/>
 
         <StackPanel Orientation="Vertical" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10">
