--- a/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
@@ -11,19 +11,15 @@
 			 d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="35"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Border Grid.Row="0" Background="{DynamicResource BrushPrimaryPanel}" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,2,0,0"/>
-
-        <DataGrid Grid.Row="1" ItemsSource="{Binding Doctors}" Style="{StaticResource TableCommon}" ColumnWidth="*" >
+        <DataGrid mah:ControlsHelper.CornerRadius="2" ItemsSource="{Binding Doctors}" BorderThickness="0"
+                  mah:HeaderedControlHelper.HeaderForeground="White" IsReadOnly="True"
+                  mah:HeaderedControlHelper.HeaderBackground="{StaticResource MahApps.Brushes.Accent2}"
+                  Style="{StaticResource dg_Ambulatory}">
             <DataGrid.InputBindings>
                 <MouseBinding MouseAction="LeftDoubleClick" 
                               Command="{Binding Path=Command.GetEntries, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
                               CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}"/>
             </DataGrid.InputBindings>
-            
             <DataGrid.CellStyle>
                 <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource TableCell}">
                     <Style.Triggers>
@@ -35,7 +31,7 @@
                                 </MultiBinding>
                             </DataTrigger.Binding>
                             <Setter Property="Foreground" Value="{StaticResource BrushBackgroundPaper}"/>
-                            <Setter Property="BorderBrush" Value="{StaticResource BrushTableSelected}"/>
+                            <Setter Property="BorderBrush" Value="Transparent"/>
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
@@ -50,31 +46,29 @@
                                     <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}" Path="DataContext.SelectedEntry"/>
                                 </MultiBinding>
                             </DataTrigger.Binding>
-                            <Setter Property="Background" Value="{StaticResource BrushTableSelected}"/>
+                            <Setter Property="Background" Value="{StaticResource MahApps.Brushes.Accent2}"/>
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </DataGrid.RowStyle>
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding TargetDateTime, StringFormat='dd/MM'}" Header="ДАТА" Width="Auto" />
-                <DataGridTextColumn Binding="{Binding TargetDateTime, StringFormat='HH:mm'}" Header="ВРЕМЯ" Width="Auto"/>
-                <DataGridTextColumn Binding="{Binding DoctorDestination.FirstName}" Header="ФАМИЛИЯ" Width="Auto"/>
-                <DataGridTextColumn Binding="{Binding DoctorDestination.MidName}" Header="ИМЯ" Width="Auto"/>
-                <DataGridTextColumn Binding="{Binding DoctorDestination.LastName}" Header="ОТЧЕСТВО" Width="Auto"/>
-                <DataGridTextColumn Binding="{Binding DoctorDestination.Qualification}" Header="СПЕЦИАЛЬНОСТЬ"/>
-                <DataGridTextColumn Binding="{Binding DoctorDestination.Department.Title.Title}" Header="ОТЕДЕЛЕНИЕ" />
-                <DataGridTemplateColumn Header="АДРЕС">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding DoctorDestination.Department.Adress.Street}"/>
-                                <TextBlock Text="{Binding DoctorDestination.Department.Adress.Number}" Margin="4,0"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
+                <DataGridTextColumn Binding="{Binding TargetDateTime, StringFormat='dd/MM ddd', ConverterCulture=RU}" Header="ДАТА" MinWidth="90" Width="0.5*" MaxWidth="150"/>
+                <DataGridTextColumn Binding="{Binding TargetDateTime, StringFormat='HH:mm'}" Header="ВРЕМЯ" MinWidth="68" Width="0.5*" MaxWidth="100"/>
+                <DataGridTextColumn Binding="{Binding DoctorDestination.FirstName}" Header="ФАМИЛИЯ" MinWidth="100" MaxWidth="170"/>
+                <DataGridTextColumn Binding="{Binding DoctorDestination.MidName}" Header="ИМЯ" MinWidth="100" MaxWidth="170"/>
+                <DataGridTextColumn Binding="{Binding DoctorDestination.LastName}" Header="ОТЧЕСТВО" MinWidth="100" MaxWidth="170"/>
+                <DataGridTextColumn Binding="{Binding DoctorDestination.Qualification}" Header="СПЕЦИАЛЬНОСТЬ" MinWidth="50"/>
+                <DataGridTextColumn Binding="{Binding DoctorDestination.Department.Title.Caption}" Header="ОТЕДЕЛЕНИЕ" MinWidth="120" MaxWidth="200"/>
+                <DataGridTextColumn Header="АДРЕС" MinWidth="150">
+                    <DataGridTextColumn.Binding>
+                        <MultiBinding StringFormat="{}{1} {2}, {0}">
+                            <Binding Path="DoctorDestination.Department.Adress.City"/>
+                            <Binding Path="DoctorDestination.Department.Adress.Street"/>
+                            <Binding Path="DoctorDestination.Department.Adress.Number"/>
+                        </MultiBinding>
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-
     </Grid>
 </UserControl>
