--- a/Hospital.WPF/Controls/Registrator/RegEntryCard.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegEntryCard.xaml
@@ -3,14 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
              xmlns:view="clr-namespace:Hospital.WPF.Views"
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type={x:Type vm:RegistratorViewModel}, IsDesignTimeCreatable=True}"
              d:DesignHeight="140" d:DesignWidth="350">
-    <!--<UserControl.DataContext>
-        <vm:RegistratorViewModel/>
-    </UserControl.DataContext>-->
 
     <UserControl.Resources>
         <Style TargetType="TextBlock">
@@ -25,8 +23,12 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Border Background="{DynamicResource BrushBackgroundPaper}" Grid.ColumnSpan="2" Effect="{StaticResource ShadowCard}" CornerRadius="2" />
-        <Border Background="{StaticResource BrushPrimaryPanelTitle}" Grid.Column="0" CornerRadius="2,0,0,2" />
-        <TextBlock Text="З А П И С Ь" FontSize="12"  Foreground="White" Margin="0,10" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+        <Button Background="{StaticResource BrushForegroundLight}" Grid.Column="0" Style="{StaticResource Button.Common}" BorderThickness="0"
+                mah:ControlsHelper.CornerRadius="2,0,0,2" mah:ControlsHelper.MouseOverBorderBrush="{StaticResource BrushForegroundVeryLight}"
+                Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Navigator.SetByType}"
+                CommandParameter="{x:Type local:RegEntryTable}"/>
+        <TextBlock Text="З А П И С Ь" FontSize="12" IsHitTestVisible="False"
+                   Foreground="White" Margin="0,10" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom">
             <TextBlock.LayoutTransform>
                 <RotateTransform Angle="-90"/>
             </TextBlock.LayoutTransform>
