--- a/Hospital.WPF/Controls/Registrator/RegEntryTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegEntryTable.xaml
@@ -1,87 +1,146 @@
-﻿<UserControl x:Class="Hospital.WPF.Controls.Registrator.RegEntryTable"
-             x:Name="EntryControl"
+﻿<UserControl x:Class="Hospital.WPF.Controls.Registrator.RegEntryTable" x:Name="EntryControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:view="clr-namespace:Hospital.WPF.Views"
+             xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
+             xmlns:services="clr-namespace:Hospital.WPF.Services" 
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
-             mc:Ignorable="d" 
-             xmlns:services="clr-namespace:Hospital.WPF.Services" xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             d:DesignHeight="450" d:DesignWidth="800">
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             d:DataContext="{d:DesignInstance Type={x:Type vm:RegistratorViewModel}, IsDesignTimeCreatable=True}"
+             mc:Ignorable="d" d:DesignHeight="200" d:DesignWidth="800">
 
     <UserControl.Resources>
         <services:RowDisablingConverter x:Key="MyRowConverter"/>
     </UserControl.Resources>
 
     <Grid>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            
-            <Border Grid.Row="0" Background="{StaticResource BrushBackgroundPaper}" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,0,0,2"/>
-            <StackPanel Orientation="Horizontal" Grid.Row="0">
-                <Button Content="Back" 
-                        Command="{Binding Path=Command.SetBody, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
-                        CommandParameter="Doctors"/>
-            </StackPanel>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="35"/>
+        </Grid.RowDefinitions>
 
-            <DataGrid Grid.Row="1" ItemsSource="{Binding Entries}" Style="{StaticResource TableCommon}" ColumnWidth="*">
-                <DataGrid.InputBindings>
-                    <MouseBinding MouseAction="LeftDoubleClick"
-                                  Command="{Binding Path=Command.SelectEntry, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
-                                  CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}">
-                    </MouseBinding>
-                </DataGrid.InputBindings>
-                <DataGrid.RowStyle>
-                    <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource TableRow}">
-                        <Style.Triggers>
-                            <DataTrigger Value="True">
-                                <DataTrigger.Binding>
-                                    <MultiBinding Converter="{StaticResource ObjectEqualsToBoolConverter}">
-                                        <Binding Path="TargetDateTime"/>
-                                        <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}" Path="DataContext.SelectedEntry.TargetDateTime"/>
-                                    </MultiBinding>
-                                </DataTrigger.Binding>
-                                <Setter Property="Background" Value="{StaticResource BrushTableSelected}"/>
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </DataGrid.RowStyle>
-                <DataGrid.CellStyle>
-                    <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource TableCell}">
-                        <Style.Triggers>
-                            <DataTrigger Value="True">
-                                <DataTrigger.Binding>
-                                    <MultiBinding Converter="{StaticResource ObjectEqualsToBoolConverter}">
-                                        <Binding Path="TargetDateTime"/>
-                                        <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}" Path="DataContext.SelectedEntry.TargetDateTime"/>
-                                    </MultiBinding>
-                                </DataTrigger.Binding>
-                                <Setter Property="Foreground" Value="{StaticResource BrushBackgroundPaper}"/>
-                                <Setter Property="BorderBrush" Value="{StaticResource BrushTableSelected}"/>
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding Path=EntryStatus, Converter={StaticResource MyRowConverter}}" Value="True">
-                                <Setter Property="Foreground" Value="Red"/>
-                                <Setter Property="FontStyle" Value="Italic"/>
-                                <Setter Property="IsEnabled" Value="False"/>
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </DataGrid.CellStyle>
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="ДАТА" Binding="{Binding TargetDateTime, StringFormat='dd/MM'}" Width="Auto"/>
-                    <DataGridTextColumn Header="ВРЕМЯ" Binding="{Binding TargetDateTime, StringFormat='HH:mm'}" Width="Auto"/>
-                    <DataGridTextColumn Header="СТАТУС" Binding="{Binding EntryStatus}"/>
-                    <DataGridTextColumn Header="ФАМИЛИЯ" Binding="{Binding Patient.FirstName}"/>
-                    <DataGridTextColumn Header="ИМЯ" Binding="{Binding Patient.MidName}"/>
-                    <DataGridTextColumn Header="ОТЧЕСТВО" Binding="{Binding Patient.LastName}"/>
-                    <DataGridTextColumn Header="ТЕЛЕФОН" Binding="{Binding Patient.PhoneNumber}"/>
+        <DataGrid Grid.Row="0" mah:ControlsHelper.CornerRadius="2" IsReadOnly="True" BorderThickness="0"
+                  mah:HeaderedControlHelper.HeaderBackground="{StaticResource BrushForegroundLight}"
+                  mah:HeaderedControlHelper.HeaderForeground="White" BorderBrush="{StaticResource BrushPrimaryBorderLight}">
+            <DataGrid.Style>
+                <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource dg_Ambulatory}">
+                    <Setter Property="ItemsSource" Value="{Binding Entries}"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=cb_onlyfree, Path=IsChecked}" Value="true">
+                            <Setter Property="ItemsSource" Value="{Binding FilteredEntries}"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.Style>
+            <DataGrid.CellStyle>
+                <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource TableCell}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type DataGridCell}">
+                                <Grid Background="{TemplateBinding Background}" Height="{TemplateBinding Height}">
+                                    <ContentPresenter Margin="{TemplateBinding Padding}"
+                                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                    <TextBlock Foreground="{TemplateBinding Foreground}"/>
+                                    <Border BorderBrush="{TemplateBinding BorderBrush}"
+                                                    BorderThickness="{TemplateBinding BorderThickness}"/>
+                                    <Grid.InputBindings>
+                                        <MouseBinding MouseAction="LeftDoubleClick"
+                                                      Command="{Binding Path=Command.SelectEntry, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
+                                                      CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}">
+                                        </MouseBinding>
+                                    </Grid.InputBindings>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <DataTrigger Value="True">
+                            <DataTrigger.Binding>
+                                <MultiBinding Converter="{StaticResource ObjectEqualsToBoolConverter}">
+                                    <Binding Path="TargetDateTime"/>
+                                    <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}" Path="DataContext.SelectedEntry.TargetDateTime"/>
+                                </MultiBinding>
+                            </DataTrigger.Binding>
+                            <Setter Property="Foreground" Value="{StaticResource BrushBackgroundPaper}"/>
+                            <Setter Property="BorderBrush" Value="Transparent"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding EntryStatus, Converter={StaticResource MyRowConverter}}" Value="true">
+                            <Setter Property="IsEnabled" Value="False"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.CellStyle>
+            <DataGrid.RowStyle>
+                <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource TableRow}">
+                    <Style.Triggers>
+                        <DataTrigger Value="True">
+                            <DataTrigger.Binding>
+                                <MultiBinding Converter="{StaticResource ObjectEqualsToBoolConverter}">
+                                    <Binding Path="TargetDateTime"/>
+                                    <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}" Path="DataContext.SelectedEntry.TargetDateTime"/>
+                                </MultiBinding>
+                            </DataTrigger.Binding>
+                            <Setter Property="Background" Value="{StaticResource BrushForegroundVeryLight}"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.RowStyle>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ДАТА" Binding="{Binding TargetDateTime, StringFormat='dd/MM ddd', ConverterCulture=RU}" MinWidth="90" Width="0.5*" MaxWidth="150"/>
+                <DataGridTextColumn Header="ВРЕМЯ" Binding="{Binding TargetDateTime, StringFormat='HH:mm'}" MinWidth="68" Width="0.5*" MaxWidth="100"/>
+                <DataGridTextColumn Header="СТАТУС" Binding="{Binding EntryStatus}" MinWidth="100" MaxWidth="170"/>
+                <DataGridTextColumn Header="ФАМИЛИЯ" Binding="{Binding Patient.FirstName}" MinWidth="100" />
+                <DataGridTextColumn Header="ИМЯ" Binding="{Binding Patient.MidName}" MinWidth="100" />
+                <DataGridTextColumn Header="ОТЧЕСТВО" Binding="{Binding Patient.LastName}" MinWidth="100" />
+                <DataGridTextColumn Header="ТЕЛЕФОН" Binding="{Binding Patient.PhoneNumber}" MinWidth="100" MaxWidth="170"/>
                 </DataGrid.Columns>
-            </DataGrid>
+        </DataGrid>
+        
+        <Border Grid.Row="1" Background="{StaticResource BrushBackgroundPaper}"
+                BorderBrush="{StaticResource BrushPrimaryBorderLight}"
+                BorderThickness="0 1 0 0">
+            <Grid>
+                <Button HorizontalAlignment="Left" 
+                        BorderThickness="5,0,0,0" BorderBrush="Transparent" mah:ControlsHelper.FocusBorderBrush="{StaticResource MahApps.Brushes.Accent}"
+                        Style="{StaticResource Button.PathWithText}" Foreground="{StaticResource BrushForegroundLight}"
+                        mah:ItemHelper.HoverForegroundBrush="{StaticResource MahApps.Brushes.Accent}"
+                        Command="{Binding Path=Command.SetBody, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
+                        CommandParameter="RegDoctorTable">
+                    <StackPanel Orientation="Horizontal" Margin="5,0,10,0">
+                        <Path Data="{StaticResource path.Undo}" Margin="5,10" Stretch="Uniform"/>
+                        <TextBlock Text="НАЗАД" Margin="5,0"/>
+                    </StackPanel>
+                </Button>
+                
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    <CheckBox x:Name="cb_onlyfree" Content="СВОБОДНО" HorizontalAlignment="Right" FontWeight="DemiBold" FontSize="12" Margin="10,0"
+                          mah:CheckBoxHelper.ForegroundChecked="{StaticResource BrushForegroundLight}"
+                          mah:CheckBoxHelper.ForegroundCheckedMouseOver="{StaticResource MahApps.Brushes.Accent}"
+                          mah:CheckBoxHelper.ForegroundCheckedPressed="{StaticResource MahApps.Brushes.Accent2}"
+                          mah:CheckBoxHelper.ForegroundUnchecked="{StaticResource BrushForegroundLight}"
+                          mah:CheckBoxHelper.ForegroundUncheckedMouseOver="{StaticResource MahApps.Brushes.Accent}"
+                          mah:CheckBoxHelper.ForegroundUncheckedPressed="{StaticResource MahApps.Brushes.Accent2}"/>
+                    <Border Width="1" Margin="0,5" Background="{StaticResource BrushPrimaryBorderLight}"/>
 
-        </Grid>
+                    <Button Style="{StaticResource Button.PathWithText}" Foreground="{StaticResource BrushForegroundLight}"
+                            mah:ControlsHelper.CornerRadius="2" Margin="3"
+                            mah:ItemHelper.HoverForegroundBrush="{StaticResource MahApps.Brushes.Accent}"
+                            Command="{Binding Path=Command.FindEntryPrevious, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}">
+                        <Path Data="{StaticResource path.ChevronLeft}" Stretch="UniformToFill" Margin="7"/>
+                    </Button>
+                    <TextBlock VerticalAlignment="Center" Margin="0,0,0,2" Text="{Binding Filter.DateTime, StringFormat=dd.MM.yy}" FontWeight="DemiBold" Foreground="{StaticResource BrushForegroundLight}" FontSize="14"/>
+                    <Button Style="{StaticResource Button.PathWithText}" Foreground="{StaticResource BrushForegroundLight}"
+                            mah:ControlsHelper.CornerRadius="2" Margin="3"
+                            mah:ItemHelper.HoverForegroundBrush="{StaticResource MahApps.Brushes.Accent}"
+                            Command="{Binding Path=Command.FindEntryNext, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}">
+                        <Path Data="{StaticResource path.ChevronRight}" Stretch="UniformToFill" Margin="7"/>
+                    </Button>
+                    
+                </StackPanel>
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
