--- a/Hospital.WPF/Controls/Registrator/RegSearchBar.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegSearchBar.xaml
@@ -1,5 +1,4 @@
-﻿<UserControl x:Class="Hospital.WPF.Controls.Registrator.RegSearchBar"
-             x:Name="RegistratorSearchBar"
+﻿<UserControl x:Class="Hospital.WPF.Controls.Registrator.RegSearchBar" x:Name="RegistratorSearchBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,8 +8,7 @@
              xmlns:view="clr-namespace:Hospital.WPF.Views"
              xmlns:ser="clr-namespace:Hospital.WPF.Services"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type={x:Type vm:RegistratorViewModel}, IsDesignTimeCreatable=True}"
              d:DesignHeight="74.049" d:DesignWidth="1080">
 
     <UserControl.Resources>
@@ -18,52 +16,44 @@
         <ser:SearchExecuter x:Key="SearchExecuter"/>
     </UserControl.Resources>
 
-    <!--<UserControl.DataContext>
-        <vm:RegistratorViewModel/>
-    </UserControl.DataContext>-->
-
-    <Grid Margin="0,5" Height="35">
+    <Grid Height="35">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Grid.Column="0"
-                 x:Name="TextBoxSearch" 
+        <TextBox Grid.Column="0" Text="{Binding SearchString, UpdateSourceTrigger=PropertyChanged}"
+                 x:Name="TextBoxSearch" Background="{StaticResource BrushBackgroundPaper}"
                  mah:TextBoxHelper.SelectAllOnFocus="True"
                  mah:TextBoxHelper.Watermark="Поиск..."
                  mah:ControlsHelper.CornerRadius="2,0,0,2"
-                 VerticalContentAlignment="Center" FontSize="15" Padding="30,0" BorderThickness="2,2,0,2">
+                 VerticalContentAlignment="Center" FontSize="15" Padding="35,0" BorderThickness="2">
             <TextBox.Style>
                 <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource MahApps.Styles.TextBox}">
                     <Setter Property="BorderBrush" Value="{DynamicResource BrushPrimaryBorderLight}"/>
                     <Style.Triggers>
                         <DataTrigger  Binding="{Binding ElementName=TabPatient, Path=IsSelected}" Value="True">
-                            <Setter Property="mah:ControlsHelper.MouseOverBorderBrush" Value="{DynamicResource BrushAccentPositive}"/>
-                            <Setter Property="mah:ControlsHelper.FocusBorderBrush" Value="{DynamicResource BrushAccentPositive}"/>
+                            <Setter Property="mah:ControlsHelper.MouseOverBorderBrush" Value="{StaticResource Brush.AccentGreen2}"/>
+                            <Setter Property="mah:ControlsHelper.FocusBorderBrush" Value="{StaticResource Brush.AccentGreen}"/>
                         </DataTrigger>
                         <DataTrigger  Binding="{Binding ElementName=TabDoctor, Path=IsSelected}" Value="True">
-                            <Setter Property="mah:ControlsHelper.MouseOverBorderBrush" Value="{DynamicResource BrushAccent2}"/>
-                            <Setter Property="mah:ControlsHelper.FocusBorderBrush" Value="{DynamicResource BrushAccent1}"/>
+                            <Setter Property="mah:ControlsHelper.MouseOverBorderBrush" Value="{DynamicResource MahApps.Brushes.Accent2}"/>
+                            <Setter Property="mah:ControlsHelper.FocusBorderBrush" Value="{DynamicResource MahApps.Brushes.Accent}"/>
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </TextBox.Style>
             <TextBox.InputBindings>
-                <KeyBinding Key="Enter">
-                    <KeyBinding.Command>
-                        <MultiBinding Converter="{StaticResource SearchExecuter}">
-                            <Binding Path="SelectedIndex" ElementName="TabSearch"/>
-                            <Binding Path="Command.FindDoctor"  RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
-                            <Binding Path="Command.FindPatient"  RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
-                        </MultiBinding>
-                    </KeyBinding.Command>
-                </KeyBinding>
+                <KeyBinding Key="Enter" 
+                            Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.GetSearchFunc}"
+                            CommandParameter="{Binding ElementName=TabSearch, Path=SelectedIndex}"/>
             </TextBox.InputBindings>
         </TextBox>
 
-        <CheckBox Style="{StaticResource cb.filterbutton}" IsEnabled="{Binding ElementName=TabDoctor, Path=IsSelected}" Margin="4" Padding="0" HorizontalAlignment="Left" Name="SearchBarPopupButton"/>
 
+        <CheckBox mah:ControlsHelper.CornerRadius="2" Style="{StaticResource cb.filterbutton}"
+                  IsEnabled="{Binding ElementName=TabDoctor, Path=IsSelected}"
+                  Margin="3" Padding="0" HorizontalAlignment="Left" Name="SearchBarPopupButton"/>
         <Popup AllowsTransparency="True" IsOpen="{Binding ElementName=SearchBarPopupButton, Path=IsChecked}" PlacementTarget="{Binding ElementName=SearchBarPopupButton}" StaysOpen="False">
             <Grid Margin="10">
                 <Border Effect="{StaticResource ShadowCard}" CornerRadius="0,10,10,10"
@@ -80,9 +70,9 @@
             </Grid>
         </Popup>
 
-        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="4,0">
             <DatePicker Grid.Column="0" Margin="0,5" VerticalContentAlignment="Center" FontSize="14" FontWeight="Bold" Width="115"
-                        Foreground="{DynamicResource BrushForegroundLight}"
+                        Foreground="{DynamicResource MahApps.Brushes.Gray1}"
                         BorderThickness="0,0,1,0" BorderBrush="{DynamicResource BrushPrimaryBorderLight}" Background="Transparent" 
                         mah:TextBoxHelper.ButtonsAlignment="Left"
                         mah:TextBoxHelper.ButtonWidth="24"
@@ -96,51 +86,63 @@
                     </MultiBinding>
                 </DatePicker.Visibility>
             </DatePicker>
-            <ListBox Grid.Column="0" x:Name="TabSearch" Margin="0,4" FontWeight="Bold" Background="{StaticResource BrushBackgroundPaper}">
-            <ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal"/>
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>
-            <ListBoxItem Content="ДОКТОРА" x:Name="TabDoctor" BorderThickness="0,0,1,0" BorderBrush="{DynamicResource BrushPrimaryBorderLight}" IsSelected="True">
-                <ListBoxItem.InputBindings>
-                    <MouseBinding MouseAction="LeftClick"
+            <ListBox Grid.Column="0" x:Name="TabSearch" Margin="0,4" FontWeight="Bold" Background="Transparent">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+                <ListBoxItem Content="ДОКТОРА" x:Name="TabDoctor" BorderThickness="0,0,1,0" IsSelected="True" BorderBrush="{DynamicResource BrushPrimaryBorderLight}">
+                    <ListBoxItem.InputBindings>
+                        <MouseBinding MouseAction="LeftClick"
                                   Command="{Binding Path=Command.SetBody, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
-                                  CommandParameter="Doctors"/>
-                </ListBoxItem.InputBindings>
-            </ListBoxItem>
-            <ListBoxItem Content="ПАЦИЕНТЫ" x:Name="TabPatient" >
-                <ListBoxItem.InputBindings>
-                    <MouseBinding MouseAction="LeftClick"
+                                  CommandParameter="RegDoctorTable"/>
+                    </ListBoxItem.InputBindings>
+                </ListBoxItem>
+                <ListBoxItem Content="ПАЦИЕНТЫ" x:Name="TabPatient" >
+                    <ListBoxItem.InputBindings>
+                        <MouseBinding MouseAction="LeftClick"
                                   Command="{Binding Path=Command.SetBody, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
-                                  CommandParameter="Patients"/>
-                </ListBoxItem.InputBindings>
-                <ListBoxItem.Style>
-                    <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource RegistratorSearchTab}">
-                        <Style.Triggers>
-                            <Trigger Property="IsSelected" Value="True">
-                                <Setter Property="Foreground" Value="{DynamicResource BrushAccentPositive}"/>
-                            </Trigger>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Foreground" Value="{DynamicResource BrushAccentPositive}"/>
-                                <Setter Property="Background" Value="{DynamicResource BrushPrimaryPanel}" />
-                                <Setter Property="Cursor" Value="Hand"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </ListBoxItem.Style>
-            </ListBoxItem>
-        </ListBox>
+                                  CommandParameter="RegPatientTable"/>
+                    </ListBoxItem.InputBindings>
+                    <ListBoxItem.Style>
+                        <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource RegistratorSearchTab}">
+                            <Style.Triggers>
+                                <Trigger Property="IsSelected" Value="True">
+                                    <Setter Property="Foreground" Value="{StaticResource Brush.AccentGreen}"/>
+                                </Trigger>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Foreground" Value="{DynamicResource Brush.AccentGreen2}"/>
+                                    <Setter Property="Background" Value="{DynamicResource BrushPrimaryPanel}" />
+                                    <Setter Property="Cursor" Value="Hand"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ListBoxItem.Style>
+                </ListBoxItem>
+            </ListBox>
         </StackPanel>
 
-        <Button Grid.Column="1" Width="120" Content="ПОИСК" x:Name="ButtonSearch" Style="{StaticResource RegistratorSearchBarButton}">
-            <Button.Command>
-                <MultiBinding Converter="{StaticResource SearchExecuter}">
-                    <Binding Path="SelectedIndex" ElementName="TabSearch"/>
-                    <Binding Path="Command.FindDoctor" RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
-                    <Binding Path="Command.FindPatient" RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
-                </MultiBinding>
-            </Button.Command>
+        <Button Grid.Column="1" Width="120" Content="ПОИСК" x:Name="ButtonSearch"
+                Foreground="white" BorderThickness="0" mah:ControlsHelper.CornerRadius="0,2,2,0"
+                Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.GetSearchFunc}"
+                CommandParameter="{Binding ElementName=TabSearch, Path=SelectedIndex}">
+            <Button.Style>
+                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Button.Common}">
+                    <Setter Property="Background" Value="{StaticResource MahApps.Brushes.Gray2}"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Style.Triggers>
+                        <DataTrigger  Binding="{Binding ElementName=TabPatient, Path=IsSelected}" Value="True">
+                            <Setter Property="mah:ControlsHelper.MouseOverBorderBrush" Value="{StaticResource Brush.AccentGreen2}"/>
+                            <Setter Property="Background" Value="{StaticResource Brush.AccentGreen}"/>
+                        </DataTrigger>
+                        <DataTrigger  Binding="{Binding ElementName=TabDoctor, Path=IsSelected}" Value="True">
+                            <Setter Property="mah:ControlsHelper.MouseOverBorderBrush" Value="{DynamicResource MahApps.Brushes.Accent2}"/>
+                            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Accent}"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
         </Button>
     </Grid>
 </UserControl>
