--- a/Hospital.WPF/Resources/Local/AmbulatoryResources.xaml
+++ b/Hospital.WPF/Resources/Local/AmbulatoryResources.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:parts="clr-namespace:Hospital.WPF.Resources.Parts"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls">
 
     <Geometry x:Key="Path.Diagnosis">
@@ -32,7 +33,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="FontSize" Value="15"/>
         <Setter Property="Margin" Value="0"/>
-        <Setter Property="Padding" Value="5,0"/>
+        <Setter Property="Padding" Value="5"/>
     </Style>
     <Style x:Key="tb.DataGrid.Editing.Left" TargetType="{x:Type TextBox}">
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
@@ -54,13 +55,13 @@
     <Style x:Key="tb.Panel" TargetType="{x:Type TextBox}" BasedOn="{StaticResource MahApps.Styles.TextBox}">
         <Setter Property="mah:ControlsHelper.CornerRadius" Value="2"/>
         <Setter Property="Margin" Value="5"/>
-        <Setter Property="Padding" Value="10,0"/>
+        <Setter Property="Padding" Value="5 0 3 0"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="FontSize" Value="15"/>
     </Style>
     <Style x:Key="cb.Panel" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource MahApps.Styles.ComboBox}">
         <Setter Property="Margin" Value="5"/>
-        <Setter Property="Padding" Value="10,0" />
+        <Setter Property="Padding" Value="5 0 3 0" />
         <Setter Property="mah:ControlsHelper.CornerRadius" Value="2"/>
         <Setter Property="IsEditable" Value="True"/>
         <Setter Property="IsTextSearchEnabled" Value="True"/>
@@ -117,6 +118,31 @@
                 <Setter Property="Opacity" Value="0.5"/>
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style TargetType="{x:Type TabControl}" x:Key="tc.Panel" BasedOn="{StaticResource MahApps.Styles.TabControl.Animated}">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="mah:TabControlHelper.Transition" Value="Default"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="BorderThickness" Value="0"/>
+    </Style>
+
+    <Style TargetType="{x:Type mah:DateTimePicker}" x:Key="dtp.Panel">
+        <Setter Property="MinHeight" Value="0"/>
+        <Setter Property="mah:TextBoxHelper.Watermark" Value="Дата"/>
+        <Setter Property="mah:ControlsHelper.CornerRadius" Value="2"/>
+        <Setter Property="IsEnabled" Value="False"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Margin" Value="5"/>
+    </Style>
+
+    <Style TargetType="{x:Type parts:LoadingSpinner}" x:Key="spinner.Expander">
+        <Setter Property="Diameter" Value="20"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="-27 0 0 0"/>
+        <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.Accent}"/>
+        <Setter Property="Background" Value="{StaticResource MahApps.Brushes.ThemeBackground}"/>
+        <Setter Property="Thickness" Value="3"/>
     </Style>
     
 </ResourceDictionary>
