--- a/Hospital.WPF/Resources/Theme.xaml
+++ b/Hospital.WPF/Resources/Theme.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
     <Color x:Key="ColorPrimaryPanel">#F2F2F2</Color>
     <Color x:Key="ColorPrimaryBorderLight">#D7D7D7</Color>
     <Color x:Key="ColorPrimaryBorderDark">#AAAAAA</Color>
@@ -15,9 +16,11 @@
     <Color x:Key="ColorAccentLight">#02A7F0</Color>
     <Color x:Key="ColorAccentHighlight">#81D3F8</Color>
     <Color x:Key="ColorAccentInvert">#F59A23</Color>
-    <Color x:Key="ColorAccentGreen">#70B603</Color>
+    <Color x:Key="ColorAccentGreen">#61a000</Color>
+    <Color x:Key="ColorAccentGreen2">#70B603</Color>
     <Color x:Key="ColorAccentRed">#D9001B</Color>
 
+    <SolidColorBrush x:Key="BrushWhiteSemiTransparent" Color="White" Opacity="0.8"/>
     <SolidColorBrush x:Key="BrushPrimaryPanel" Color="{DynamicResource ColorPrimaryPanel}"/>
     <SolidColorBrush x:Key="BrushPrimaryBorderLight" Color="{DynamicResource ColorPrimaryBorderLight}"/>
     <SolidColorBrush x:Key="BrushPrimaryBorderDark" Color="{DynamicResource ColorPrimaryBorderDark}"/>
@@ -35,11 +38,10 @@
     <SolidColorBrush x:Key="BrushAccent1" Color="{DynamicResource ColorAccentLight}"/>
     <SolidColorBrush x:Key="BrushAccent2" Color="{DynamicResource ColorAccentHighlight}"/>
     <SolidColorBrush x:Key="BrushAccentInvert" Color="{DynamicResource ColorAccentInvert}"/>
-    <SolidColorBrush x:Key="BrushAccentPositive" Color="{DynamicResource ColorAccentGreen}"/>
-    <SolidColorBrush x:Key="BrushAccentNegative" Color="{DynamicResource ColorAccentRed}" Opacity=".2"/>
+    <SolidColorBrush x:Key="Brush.AccentGreen" Color="{DynamicResource ColorAccentGreen}"/>
+    <SolidColorBrush x:Key="Brush.AccentGreen2" Color="{DynamicResource ColorAccentGreen2}"/>
+    <SolidColorBrush x:Key="Brush.AccentRed" Color="{DynamicResource ColorAccentRed}"/>
 
-    <DropShadowEffect x:Key="EffectShadowDown" BlurRadius="5" Direction="270" Opacity="0.2" ShadowDepth="3" Color="Black"  />
+    <DropShadowEffect x:Key="EffectShadowDown" BlurRadius="10" Direction="270"  Opacity="0.15" ShadowDepth="4" Color="Black"  />
     <DropShadowEffect x:Key="ShadowCard" BlurRadius="15" Opacity="0.2" ShadowDepth="1" Color="Black"  />
-
-
 </ResourceDictionary>
