--- a/Hospital.WPF/Views/Registrator.xaml
+++ b/Hospital.WPF/Views/Registrator.xaml
@@ -1,25 +1,71 @@
-﻿<UserControl x:Class="Hospital.WPF.Views.Registrator"
-             x:Name="RegistratorView"
+﻿<UserControl x:Class="Hospital.WPF.Views.Registrator" x:Name="RegistratorView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+      xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
       xmlns:local="clr-namespace:Hospital.WPF.Views"
+      xmlns:parts="clr-namespace:Hospital.WPF.Resources.Parts"
       xmlns:controls="clr-namespace:Hospital.WPF.Controls.Registrator"
-      mc:Ignorable="d" 
+      mc:Ignorable="d" d:DataContext="{d:DesignInstance Type={x:Type vm:RegistratorViewModel}, IsDesignTimeCreatable=True}"
       d:DesignHeight="600" d:DesignWidth="1280">
+    <UserControl.Resources>
+        <Style TargetType="{x:Type mah:TransitioningContentControl}">
+            <Setter Property="LayoutTransform">
+                <Setter.Value>
+                    <ScaleTransform ScaleY="0"/>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Style.Triggers>
+                <Trigger Property="IsHitTestVisible" Value="True">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility">
+                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static Visibility.Visible}"/>
+                                </ObjectAnimationUsingKeyFrames>
+                                <DoubleAnimation Storyboard.TargetProperty="(ContentPresenter.LayoutTransform).(ScaleTransform.ScaleY)"
+                                                                     To="1" Duration="0:0:0.2"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+                    <Trigger.ExitActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="(ContentPresenter.LayoutTransform).(ScaleTransform.ScaleY)"
+                                                                     To="0" Duration="0:0:0.2"/>
+                                <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility">
+                                    <DiscreteObjectKeyFrame KeyTime="0:0:0.2" Value="{x:Static Visibility.Collapsed}"/>
+                                </ObjectAnimationUsingKeyFrames>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.ExitActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="90"/>
-            <RowDefinition/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Background="{DynamicResource  BrushPrimaryPanel}" Effect="{StaticResource  EffectShadowDown}"/>
+        <Border Grid.Row="0" Background="{StaticResource BrushPrimaryPanel}" Effect="{StaticResource  EffectShadowDown}"/>
+        <ProgressBar IsIndeterminate="{Binding IsLoading}" Grid.Row="0" VerticalAlignment="Bottom" Height="3">
+            <ProgressBar.Style>
+                <Style TargetType="{x:Type ProgressBar}">
+                    <Setter Property="BorderThickness" Value="0"/>
+                    <Setter Property="Background" Value="Transparent"/>
+                </Style>
+            </ProgressBar.Style>
+        </ProgressBar>
+
         <Grid Grid.RowSpan="2" MinWidth="900" MaxWidth="1400" HorizontalAlignment="Stretch" Margin="20,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="90"/>
-                <RowDefinition Height="190"/>
+                <RowDefinition MinHeight="20" Height="Auto"/>
                 <RowDefinition/>
                 <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
@@ -32,15 +78,18 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <mah:TransitioningContentControl Grid.Column="0" Margin="0,25,10,25" Transition="Right">
-                    <controls:RegDoctorCards/>
+                <mah:TransitioningContentControl IsHitTestVisible="{Binding SelectedEntry, Converter={StaticResource NullToBoolConverter}}" Height="130" Grid.Column="0" Margin="0,25,10,25" Transition="Right" >
+                    <controls:RegDoctorCards />
                 </mah:TransitioningContentControl>
-                <controls:RegPatientCard Grid.Column="2" Margin="10,25,0,25"/>
-                <controls:RegEntryCard Grid.Column="1" Margin="5,25"/>
-
+                <mah:TransitioningContentControl IsHitTestVisible="{Binding SelectedEntry, Converter={StaticResource NullToBoolConverter}}" Height="130" Grid.Column="1" Margin="5,25" Transition="Right" >
+                    <controls:RegEntryCard/>
+                </mah:TransitioningContentControl>
+                <mah:TransitioningContentControl IsHitTestVisible="{Binding SelectedPatient, Converter={StaticResource NullToBoolConverter}}" Height="130" Grid.Column="2" Margin="10,25,0,25" Transition="Right">
+                    <controls:RegPatientCard/>
+                </mah:TransitioningContentControl>
             </Grid>
 
-            <mah:TransitioningContentControl Grid.Row="2" Content="{Binding ElementName=RegistratorView, Path=Navigator.CurrentBody}" Transition="Right" VerticalAlignment="Top"/>
+            <mah:TransitioningContentControl Effect="{StaticResource ShadowCard}" Grid.Row="2" Content="{Binding ElementName=RegistratorView, Path=Navigator.CurrentBody}" Transition="Right" VerticalAlignment="Stretch" VerticalContentAlignment="Top"/>
 
         </Grid>
     </Grid>
